--- a/public/404.html
+++ b/public/404.html
@@ -1,67 +1,52 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
-
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
-</head>
-
-<body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+<div id="PageNotFound">
+  <div class="error">
+    <div class="emotion">
+       <?xml version="1.0" encoding="iso-8859-1"?>
+      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+         viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+      <g transform="matrix(1.25 0 0 -1.25 0 45)">
+        <g>
+          <g>
+            <path style="fill:#FFCC4D;" d="M409.6-168.8c0-113.106-91.694-204.8-204.8-204.8C91.705-373.6,0-281.906,0-168.8
+              C0-55.705,91.705,36,204.8,36C317.906,36,409.6-55.705,409.6-168.8"/>
+            <path id="SVGCleanerId_0" style="fill:#664500;" d="M159.289-151.733c0-22.005-12.732-39.822-28.444-39.822
+              S102.4-173.738,102.4-151.733c0,21.993,12.732,39.822,28.444,39.822S159.289-129.74,159.289-151.733"/>
+            <g transform="translate(13)">
+              <path id="SVGCleanerId_0_1_" style="fill:#664500;" d="M307.2-151.733c0-22.005-12.732-39.822-28.444-39.822
+                s-28.444,17.818-28.444,39.822c0,21.993,12.732,39.822,28.444,39.822S307.2-129.74,307.2-151.733"/>
+            </g>
+            <path style="fill:#664500;" d="M267.207-281.201c-0.137,0.501-13.039,49.823-62.407,49.823
+              c-49.391,0-62.293-49.323-62.407-49.823c-0.603-2.423,0.489-4.904,2.628-6.19c2.139-1.274,4.927-0.978,6.781,0.683
+              c0.114,0.08,11.537,9.819,52.998,9.819c40.835,0,52.531-9.444,52.975-9.819c1.081-1.024,2.492-1.559,3.914-1.559
+              c0.956,0,1.923,0.239,2.799,0.728C266.718-286.264,267.833-283.681,267.207-281.201"/>
+            <path style="fill:#5DADEC;" d="M113.778-305.333c0-31.425-25.463-56.889-56.889-56.889S0-336.759,0-305.333
+              s45.511,113.778,56.889,113.778S113.778-273.908,113.778-305.333"/>
+            <g>
+              <path style="fill:#664500;" d="M341.333-111.911c-63.192,0-88.769,49.687-89.828,51.803c-2.81,5.621-0.523,12.447,5.097,15.269
+                c5.598,2.799,12.425,0.535,15.246-5.052c0.842-1.65,20.708-39.265,69.484-39.265c6.292,0,11.378-5.097,11.378-11.378
+                C352.711-106.814,347.625-111.911,341.333-111.911"/>
+              <path style="fill:#664500;" d="M68.267-111.911c-6.281,0-11.378,5.097-11.378,11.378c0,6.281,5.097,11.378,11.378,11.378
+                c57.833,0,68.221,35.499,68.642,37.012c1.65,6.007,7.851,9.648,13.87,8.067c6.03-1.582,9.682-7.657,8.169-13.71
+                C158.39-59.994,144.543-111.911,68.267-111.911"/>
+            </g>
+          </g>
+        </g>
+      </svg>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <h1>404</h1>
+    <p>Oh no! Page Not Found.</p>
+    <div class="go-back">
+      <a href="#" class="button">
+        <?xml version="1.0" encoding="iso-8859-1"?>
+        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+           viewBox="0 0 31.494 31.494" style="enable-background:new 0 0 31.494 31.494;" xml:space="preserve">
+        <path style="fill:#fbfbfb;" d="M10.273,5.009c0.444-0.444,1.143-0.444,1.587,0c0.429,0.429,0.429,1.143,0,1.571l-8.047,8.047h26.554
+          c0.619,0,1.127,0.492,1.127,1.111c0,0.619-0.508,1.127-1.127,1.127H3.813l8.047,8.032c0.429,0.444,0.429,1.159,0,1.587
+          c-0.444,0.444-1.143,0.444-1.587,0l-9.952-9.952c-0.429-0.429-0.429-1.143,0-1.571L10.273,5.009z"/>
+        <g>
+        </g>
+        </svg> Go Back to Homepage
+        </a>
+      </div>
   </div>
-</body>
-</html>
+</div>
